--- a/src/app/my-components/auth/register/register.component.html
+++ b/src/app/my-components/auth/register/register.component.html
@@ -107,7 +107,13 @@
               </div>
             </div>
             <div class="text-center mt-2">
-              <button type="submit" class="btn btn-primary" [disabled]="!registerForm.valid">Register</button>
+              <button
+                type="submit"
+                class="btn btn-primary"
+                [disabled]="!registerForm.valid"
+              >
+                Register
+              </button>
             </div>
             <div class="text-center mt-2">
               <span>Back to <a routerLink="/login">login!</a></span>
