--- a/src/app/my-components/home/home.component.html
+++ b/src/app/my-components/home/home.component.html
@@ -1,2 +1,13 @@
-<p>home works!</p>
-<button type="submit" class="btn btn-primary" (click)="logout()">Log-out</button>
+<app-nav></app-nav>
+<div class="container">
+  <div class="animation">
+    <div class="circle"></div>
+    <div class="square"></div>
+  </div>
+  <h1>Welcome to Employee Management</h1>
+  <p>
+    We provide tools to help you manage your workforce efficiently and
+    effectively.
+  </p>
+  <button>Get Started</button>
+</div>
