--- a/src/app/my-components/page-not-found/page-not-found.component.html
+++ b/src/app/my-components/page-not-found/page-not-found.component.html
@@ -1,1 +1,11 @@
-<p>page-not-found works!</p>
+<div class="error-template d-flex align-items-center">
+  <div class="mx-auto">
+    <h1>404</h1>
+    <p>The page you are looking for was not found.</p>
+    <div class="error-actions">
+      <a href="javascript:history.back()" class="btn btn-secondary btn-lg"
+        >Go Back</a
+      >
+    </div>
+  </div>
+</div>
