modifed page-not-found UI

--- a/src/app/my-components/page-not-found/page-not-found.component.html
+++ b/src/app/my-components/page-not-found/page-not-found.component.html
@@ -1,11 +1,5 @@
-<div class="error-template d-flex align-items-center">
-  <div class="mx-auto">
-    <h1>404</h1>
-    <p>The page you are looking for was not found.</p>
-    <div class="error-actions">
-      <a href="javascript:history.back()" class="btn btn-secondary btn-lg"
-        >Go Back</a
-      >
-    </div>
-  </div>
+<div class="error-template">
+  <h1 class="error-code">404</h1>
+  <p class="error-message">Oops! Page not found</p>
+  <button class="btn btn-back" onclick="window.history.back()">Go Back</button>
 </div>
